[tool.poetry]
name = "girg-sampling"
version = "0.1.1"
description = "Efficient sampling of Geometric Inhomogeneous Random Graphs (GIRG). W wrapper for C++ libgirg and libhypergirg."
authors = ["Tomas Gavenciak <gavento@gmail.com>"]
readme = "README.md"
repository = "https://github.com/gavento/girg-sampling"
homepage = "https://github.com/gavento/girg-sampling"

packages = [
    { include = "girg_sampling" },
]

include = [
    {path = "girgs_cpplib/**", format = "sdist"},
    {path = "Makefile", format = "sdist"},
    {path = "poetry.lock", format = "sdist"},
    {path = "girg_sampling/_*_wrapper.so", format = "wheel"},
    {path = "girg_sampling/lib*girgs.so.1", format = "wheel"},
]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = ">=3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"
pre-commit = "^2.7.1"
cmaketools = "^0.1.6"
pip = "^20.2.3"
pybind11 = "^2.5.0"
cmake = ">=3.1.0"
twine = "^3.2.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
