[tool.poetry]
name = "girg-sampling"
version = "0.3.0"
description = "Efficient sampling of Geometric Inhomogeneous Random Graphs (GIRG). Wrapper for C++ libraries libgirg and libhypergirg."
authors = ["Tomas Gavenciak <gavento@gmail.com>"]
readme = "README.md"
repository = "https://github.com/gavento/girg-sampling"
homepage = "https://github.com/gavento/girg-sampling"

packages = [
    { include = "girg_sampling" },
]

include = [
    {path = "girgs_cpplib/**", format = "sdist"},
    {path = "Makefile", format = "sdist"},
    {path = "poetry.lock", format = "sdist"},
    {path = "girg_sampling/_*_wrapper.so", format = "wheel"},
    {path = "girg_sampling/lib*girgs.so.1", format = "wheel"},
]

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = ">=3.8,<4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
black = "^20.8b1"
pre-commit = "^2.7.1"
cmaketools = "^0.1.6"
pip = "^21.3"
pybind11 = "^2.9"
cmake = "^3.22"
twine = "^3.7"
urllib3 = "^1.26"

[tool.poetry.group.dev.dependencies]
networkx = "^3.1"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
